# TOauth-pydantic2

./: .env  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  docker-compose.override.yml  docker-compose.yml
backend/: backend.dockerfile  celeryworker.dockerfile
backend/app/: pyproject.toml
backend/app/app/api/api_v1/endpoints/: login.py
backend/app/app/core/: config.py
frontend/: .env  Dockerfile  package-lock.json
