[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.35.0"
fastapi = "^0.115.14"
python-multipart = "^0.0.5"
email-validator = "^2.0.0"
requests = "^2.23.0"
celery = "^5.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
emails = "^0.6.0"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}

[tool.poetry.dev-dependencies]
mypy = "^1.0.0"
black = "^22.0.0"
isort = "^5.0.0"
autoflake = "^1.7.0"
flake8 = "^5.0.0"
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

